<resources>
    <string name="app_name">DesignSample-Kotlin</string>
    <string name="add_to_chart">ADD TO CHART</string>
    <string name="title_beef_cheese">Beef Cheese</string>
    <string name="cheese">Cheese</string>
    <string name="sausage">Sausage</string>
    <string name="olive">Olive</string>
    <string name="pepper">Pepper</string>
    <string name="delivery">Delivery</string>
    <string name="meat_lover_get_ready_to_meet_your_pizza">Meat lover, get ready to meet your pizza !</string>
    <string name="price">$ 5.98</string>
    <string name="pizza">Pizza</string>
    <string name="_20_min">20 min</string>
</resources>